@@ -1,3 +1,9 @@
+2006-02-21 - standa
+FT2 antialiasing with a small help of the aranym driver which is now
+able to expandArea() with 8bit chunky data (mfdb_standard = 0x0100).
+Small adjustments in fixed witdth fonts detection and short font
+name in the vqt_fontheader().
+
 2006-02-21 - johan
 FT2 alternative for vqt_fontheader -> PapyrusX knows about font names.
 A couple of bug fixes.
